--- a/calculator.html
+++ b/calculator.html
@@ -49,9 +49,10 @@
       <input type="number" id="b" name="b" value="2" /> =
       <output name="result" for="a b">0</output>
     </form>
-  
+  <small>Who doesn't love modular arithmetic?</small>
 </body>
 
+<br />
 <br />
 
 <form>
@@ -59,12 +60,14 @@
     <input type="checkbox" name="termsandservices">
     <button>Submit.</button>
   </form>
-  
 
+<br />
 
+<details>
+  <summary>About The Creator</summary>
+    <p><a href="https://github.com/Avesta03">For more of my work - find my GitHub here.</p></a>
 
-
-
+</details>
 
 
 
