Figured out how to stack breaks without spamming.

--- a/calculator.html
+++ b/calculator.html
@@ -52,8 +52,7 @@
   <small>Who doesn't love modular arithmetic?</small>
 </body>
 
-<br />
-<br />
+<p class="br"></p>
 
 <form>
     <label for="termsandservices">Click here if you enjoyed the calculator!</label>
