Addition of UTF-8 and emojis!

--- a/calculator.html
+++ b/calculator.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
 <h1>Welcome to my excessively complicated calculator!</h1>
+<meta charset="UTF-8">
 </head>
 
 <link href="style.css" rel="stylesheet" type="text/css"/>
@@ -65,6 +66,7 @@
 <details>
   <summary>About The Creator</summary>
     <p><a href="https://github.com/Avesta03">For more of my work - find my GitHub here.</p></a>
+    <p style="font-size:25px">&#11088;</p>
 
 </details>
 
@@ -76,8 +78,7 @@
 
 
 
-<footer>
-    <p>Avesta03 - <span class="underline">&copy; Copyright 2023</p></footer>  
-
+<footer>  
+  <p>Avesta03 - <span class="underline">&copy; Copyright 2023</p></footer>  
 
 </html>
